// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Radio /> renders correctly 1`] = `
.emotion-4 {
  display: inline-block;
  position: relative;
}

.emotion-0 {
  opacity: 0;
  position: absolute;
  z-index: 0;
}

.emotion-0:focus {
  box-shadow: none;
}

.emotion-2 {
  display: inline-block;
  position: relative;
  vertical-align: middle;
  margin-bottom: 0.125rem;
  height: 1.25rem;
  width: 1.25rem;
  border-radius: 50%;
  z-index: 1;
}

input:checked + .emotion-2:after {
  position: absolute;
  display: block;
  content: '';
  border-radius: 50%;
}

<Radio>
  <RadioWrapper>
    <div
      className="emotion-4 emotion-5"
    >
      <RadioInput
        type="radio"
      >
        <input
          className="emotion-0 emotion-1"
          type="radio"
        />
      </RadioInput>
      <RadioIcon>
        <div
          className="emotion-2 emotion-3"
        />
      </RadioIcon>
    </div>
  </RadioWrapper>
</Radio>
`;

exports[`<Radio /> when checked renders correctly 1`] = `
.emotion-4 {
  display: inline-block;
  position: relative;
}

.emotion-0 {
  opacity: 0;
  position: absolute;
  z-index: 0;
}

.emotion-0:focus {
  box-shadow: none;
}

.emotion-2 {
  display: inline-block;
  position: relative;
  vertical-align: middle;
  margin-bottom: 0.125rem;
  height: 1.25rem;
  width: 1.25rem;
  border-radius: 50%;
  z-index: 1;
}

input:checked + .emotion-2:after {
  position: absolute;
  display: block;
  content: '';
  border-radius: 50%;
}

<Radio
  defaultChecked={true}
>
  <RadioWrapper>
    <div
      className="emotion-4 emotion-5"
    >
      <RadioInput
        defaultChecked={true}
        type="radio"
      >
        <input
          className="emotion-0 emotion-1"
          defaultChecked={true}
          type="radio"
        />
      </RadioInput>
      <RadioIcon>
        <div
          className="emotion-2 emotion-3"
        />
      </RadioIcon>
    </div>
  </RadioWrapper>
</Radio>
`;

exports[`<Radio /> when disabled renders correctly 1`] = `
.emotion-4 {
  display: inline-block;
  position: relative;
}

.emotion-0 {
  opacity: 0;
  position: absolute;
  z-index: 0;
}

.emotion-0:focus {
  box-shadow: none;
}

.emotion-2 {
  display: inline-block;
  position: relative;
  vertical-align: middle;
  margin-bottom: 0.125rem;
  height: 1.25rem;
  width: 1.25rem;
  border-radius: 50%;
  z-index: 1;
}

input:checked + .emotion-2:after {
  position: absolute;
  display: block;
  content: '';
  border-radius: 50%;
}

<Radio
  disabled={true}
>
  <RadioWrapper>
    <div
      className="emotion-4 emotion-5"
    >
      <RadioInput
        disabled={true}
        type="radio"
      >
        <input
          className="emotion-0 emotion-1"
          disabled={true}
          type="radio"
        />
      </RadioInput>
      <RadioIcon>
        <div
          className="emotion-2 emotion-3"
        />
      </RadioIcon>
    </div>
  </RadioWrapper>
</Radio>
`;
